# Apex-Analysis

./: .gitignore  CONTRIBUTORS.md  README.md  SECURITY.md  aggregator.py  config.py  fetch_data.py  main.py  news_processor.py  pyproject.toml  sentiment_analyzer.py  setup.py  tasks.md  test_aggregate.py  test_save_png.py  ui.py  utils.py
apex_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reports/NVDA/: NVDA_news_20251028_021415.json  NVDA_price_data_20251028_021415.csv  NVDA_report_20251028_021417.json  NVDA_sentiment_data.csv  NVDA_summary_20251028_021415.json
reports/TEST/: TEST_summary_20251028_020745.json
src/: __init__.py  __main__.py  aggregator.py  config.py  fetch_data.py  news_processor.py  sentiment_analyzer.py  ui.py  utils.py
