[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apex_analysis"
version = "1.0.0"
description = "Apex Analysis - Stock market analysis tool with sentiment analysis"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "yfinance>=0.1.70",
    "requests>=2.26.0",
    "beautifulsoup4>=4.10.0",
    "feedparser>=6.0.0",
    "nltk>=3.6.0",
    "textblob>=0.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
]

[project.scripts]
apex-analysis = "src.ui:run_cli"

[tool.setuptools]
package-dir = { "" = "." }
packages = find:

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
exclude = ["tests", "*.tests", "*.tests.*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
